Fixed Navbar Clipping pages issue

--- a/style/style.css
+++ b/style/style.css
@@ -70,7 +70,13 @@ nav.links ul li a {
     font-size: 20px;
 }
 
-#content-area {}
+body {
+    margin-top: 170px;
+}
+
+#content-area {
+    margin-top: 500px;
+}
 
 /* Styling for the overarching container for each card to keep things uniform */
 .card-container {
